--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Seg-Bois</title>
   </head>
   <body>
-    
+    <div id='segway'></div>
     <script src='script.js' />
   </body>
 </html>
