--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id='segway'></div>
-    <script src='script.js' />
+    <script src='scripts/script.js' />
   </body>
 </html>
